README: add Maven Central coordinates now that 0.1 is published
Adds a Maven Central badge, replaces "Build from source" (which said
"not yet published") with an Install section showing the real
lmdb-platform/lmdb+native-classifier/BOM coordinates at version 0.1.
Build-from-source instructions move to a subsection for contributors.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>